--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -16,6 +16,9 @@ dependencies:
   path_provider: ^2.0.0 # Adjust version as needed
   archive: ^3.0.0 # Adjust version as needed, for unzipping
   http: ^1.0.0 # For downloading models
+  share_plus: ^7.2.1
+  shared_preferences: ^2.2.2
+  video_player: ^2.8.1
 
   ultralytics_yolo:
     path: ../
